# progressive-overload-tracker

./: .coverage  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  DOCKER_EXPLANATION.md  Dockerfile  IMPLEMENTATION_PLAN.md  PROGRESSIVE_OVERLOAD_GUIDE.md  README.md  docker-compose.prod.yml  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  docker.yml
backend/: Dockerfile  Makefile  README.md  docker-compose.dev.yml  pyproject.toml  seed_database.py  setup.sh
backend/docs/: API.md  DATABASE.md
backend/migrations/: env.py
backend/src/: config.py  logging_config.py  main.py
backend/tests/: conftest.py  test_workflow.py  utils.py
frontend/: README.md
migrations/: env.py
migrations/versions/: 1206876b2821_check_model_consistency.py  361a12285c98_refactor_exercise_model_to_use_enums_.py  366abfaf60c8_rename_name_pt_to_name_in_exercises.py  3bea2d905dda_refactor_exercise_model_to_english_only_.py  6aaffe864b1c_add_notes_field_to_session_model.py  839d25f8d1b2_add_order_field_to_exercise_session_.py  91274a85defd_add_user_id_to_template_model.py  a0a7a9212e73_add_user_model_and_link_to_session.py  be0a97f219e8_add_order_fields_to_exercisesession_and_.py  ef151a631380_initial_migration.py  f633ad21cbdd_add_description_field_to_template_model.py
src/: config.py  main.py
src/database/: database.py
src/models/: __init__.py  enums.py  exercise.py  exercise_session.py  session.py  set.py  template.py  user.py
src/routers/: exercises.py  sessions.py  templates.py  users.py
src/schemas/: __init__.py  exercise.py  exercise_session.py  exercises.py  session.py  set.py  template.py  user.py
src/services/: __init__.py  exercise_service.py  (+5 more)
tests/: __init__.py  conftest.py  utils.py
(+54 files in other folders)
